numbering show deleted

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,7 +6,7 @@
         <div id="icon" class="float-end">
           <span class="iconify" data-icon="mdi:pin"></span>
         </div>
-        <ol class="list-repertory mt-3 mb-2">
+        <ul class="list-repertory mt-3 mb-2">
           <a href="#summary">
             <li>Résumé</li>
           </a>
@@ -25,7 +25,7 @@
           <a href="#references">
             <li>Références</li>
           </a>
-        </ol>
+        </ul>
       </div>
       <div id="article-header">
         <%= render 'header_article_show' %>
