--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -25,7 +25,18 @@
         <%= label_tag 'Références' %>
         <%= text_area_tag 'references', nil, class: "form-control" %>
         <br>
+        <%= label_tag 'Mots Clés' %>
+        <%= text_field_tag 'tags',
+                           nil,
+                           id: 'input-tags',
+                           class: "form-control ",
+                           placeholder: 'Mots clés séparés par des ;'
+        %>
+        <%= hidden_field :tags, nil, class: 'tags-array' %>
 
+        <div class="tag-container">
+        </div>
+        <br/>
         <%= label_tag "Ajouter une image a l'article", nil, class: 'mb-2' %>
         <br>
         <%= file_field_tag :picture %>
@@ -36,3 +47,5 @@
     </div>
   </div>
 </div>
+
+<%= javascript_include_tag 'tags' %>
