--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,10 +23,10 @@
     <%= render 'layouts/flash' %>
 <%= render 'layouts/loading_animation' %>
     <%= yield %>
-    <% if controller_name == "sessions" || (controller_name == "users" && action_name != "show") || controller_name == "registrations" || controller_name == "passwords" || action_name == "contact" || action_name == "about_us" || action_name == "not_found" || action_name == "internal_error" || action_name == "unacceptable"  %> 
+    <% if controller_name == "sessions" || controller_name == "users" || controller_name == "registrations" || controller_name == "passwords" || action_name == "contact" || action_name == "about_us" || action_name == "not_found" || action_name == "internal_error" || action_name == "unacceptable"  %> 
       <%= render "layouts/footer_sticky" %>
     <% else %>
-      <% unless (controller_name == "articles" && action_name == "index") || (controller_name == "searches" && action_name == "index") || (controller_name == "users" && action_name == "show")%>
+      <% unless (controller_name == "articles" && action_name == "index") || (controller_name == "searches" && action_name == "index") || (controller_name == "profiles" && action_name == "show")%>
         <%= render 'layouts/footer' %>
       <% end %>
     <% end %>
