--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -16,7 +16,7 @@
         </div> 
       </div>    
     </div> 
-    <%= render 'user_article_list' %> 
+    <%= render 'profile_article_list' %> 
   </div>
 </div>
 
