--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -14,7 +14,12 @@
             <h1><%=@user.first_name%> <%=@user.last_name%></h1> 
           </div>
         </div> 
-      </div>    
+      </div> 
+
+      <%if user_signed_in?%> 
+        <a href="<%= edit_profile_path(@user.id) %>" class="btn btn-secondary float-end">Modifier votre profil</a>
+      <%end%>
+      
     </div> 
     <%= render 'profile_article_list' %> 
   </div>
