added the lines to send the tags to params upon creation

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -32,6 +32,7 @@
                            class: "form-control",
                            placeholder: 'Mots clés séparés par des ;'
         %>
+        <%= hidden_field :tags, nil, id: 'tags-array' %>
         <div class="tag-container">
         </div>
         <br/>
