should be ok now

--- a/app/assets/stylesheets/pdf.scss
+++ b/app/assets/stylesheets/pdf.scss
@@ -14,7 +14,7 @@ a {
   display: none;
 }
 
-img{
+img {
   display: none;
 }
 png {
@@ -22,5 +22,6 @@ png {
 }
 
 .pdf-head {
-  
+  font-size: 3em;
+  text-align: center;
 }
