--- a/app/views/layouts/pdf.html.erb
+++ b/app/views/layouts/pdf.html.erb
@@ -5,7 +5,9 @@
     <%= stylesheet_link_tag wicked_pdf_asset_base64("pdf") %>
   </head>
   <body onload='number_pages'>
-      <div class="pdf-head d-flex justify-content-start h-100">      
+      <div class="pdf-head">  
+      Projet GAFFEx - Gathering of fundamentally failure experiment 
+    <hr>
       </div>
     <div id="content">
       <%= yield %>
