fixed double tags form inputs, and fixed tag object being passed intead of tag name in js

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -26,7 +26,7 @@
         <%= text_area_tag 'references', nil, class: "form-control" %>
         <br>
         <%= label_tag 'Mots Clés' %>
-        <%= text_field_tag 'tags',
+        <%= text_field_tag 'tags_input',
                            nil,
                            id: 'tag-input',
                            class: "form-control",
