--- a/app/views/articles/_details_article_show.html.erb
+++ b/app/views/articles/_details_article_show.html.erb
@@ -59,7 +59,7 @@
             <%= simple_format(@article.references)%>
           </div>
           <div class="d-flex justify-content-end">
-           <a href="<%= article_path(@article.id, format: :pdf) %>" class="btn btn-primary hover">Exporter en PDF</a>
+           <a href="<%= article_path(@article.id, format: :pdf) %>"  target="_blank" class="btn btn-primary hover">Exporter en PDF</a>
           </div>
         </div>
       </div>
