--- a/app/views/articles/_details_article_show.html.erb
+++ b/app/views/articles/_details_article_show.html.erb
@@ -6,7 +6,7 @@
 </div>
 
 <div class="text-center mb-2 mt-4">
-  <small class="text-muted">mots clés :</small><br/>
+  <small class="">mots clés :</small><br/>
   <% @article.keywords.each do |keyword| %>
     <p class="btn btn-primary mt-2" style="cursor: unset"><%= keyword.name %></p>
   <% end %>
