upgradeable version of blur loading

--- a/app/views/layouts/_loading_animation.html.erb
+++ b/app/views/layouts/_loading_animation.html.erb
@@ -35,4 +35,6 @@
 
 <script> loadingWrapper = document.querySelector('.loading-wrapper');
 window.addEventListener('load', function () {loadingWrapper.style.display = 'none';});
+blur = document.querySelector('.colblur');
+window.addEventListener('load', function () {blur.style.filter = 'none';});
 </script>
