--- a/app/assets/stylesheets/loading_animation.scss
+++ b/app/assets/stylesheets/loading_animation.scss
@@ -1,7 +1,3 @@
-.blur{
-  filter: blur(4px);
-}
-
 .container-animation {
   z-index: 999;
   position: absolute;
@@ -13,6 +9,10 @@
   margin-right: auto;
   width: 500px;
   height: 500px;
+}
+
+.colblur {
+  filter: blur(4px);
 }
 
 .loader_1,
