--- a/app/views/articles/_details_article_show.html.erb
+++ b/app/views/articles/_details_article_show.html.erb
@@ -5,7 +5,7 @@
   </div>
 </div>
 
-<div class="text-center mb-2 mt-4">
+<div class="text-center mx-3 mb-2 mt-4">
   <small class="">mots clés :</small><br/>
   <% @article.keywords.each do |keyword| %>
     <p class="btn btn-primary mt-2" style="cursor: unset"><%= keyword.name %></p>
