--- a/app/assets/stylesheets/loading_animation.scss
+++ b/app/assets/stylesheets/loading_animation.scss
@@ -11,10 +11,6 @@
   height: 500px;
 }
 
-.colblur {
-  filter: blur(4px);
-}
-
 .loader_1,
 .loader_2 {
   position: absolute;
@@ -122,5 +118,10 @@
   100% {
     width: 2px;
   }
+}
+
+.colblur {
+  filter: blur(4px);
+  z-index: 998;
 }
 
