--- a/app/views/layouts/_loading_animation.html.erb
+++ b/app/views/layouts/_loading_animation.html.erb
@@ -33,8 +33,11 @@
   </div>
 
 
-<script> loadingWrapper = document.querySelector('.loading-wrapper');
-window.addEventListener('load', function () {loadingWrapper.style.display = 'none';});
+<script> 
+loadingWrapper = document.querySelector('.loading-wrapper');
 blur = document.querySelector('.colblur');
-window.addEventListener('load', function () {blur.style.filter = 'none';});
+window.addEventListener('load',() =>{
+  loadingWrapper.style.display = 'none';
+  blur.style.filter = 'none';
+  });
 </script>
