--- a/app/assets/stylesheets/loading_animation.scss
+++ b/app/assets/stylesheets/loading_animation.scss
@@ -1,8 +1,7 @@
 .container-animation {
   z-index: 999;
   position: absolute;
-  top: auto;
-  bottom: auto;
+  top: 25%;
   left: 0;
   right: 0;
   margin-left: auto;
@@ -121,7 +120,6 @@
 }
 
 .colblur {
-  filter: blur(4px);
-  z-index: 998;
+  filter: blur(10px);
 }
 
