--- a/app/assets/stylesheets/pdf.scss
+++ b/app/assets/stylesheets/pdf.scss
@@ -1,5 +1,18 @@
+* {
+  font-family: Helvetica, Arial, sans-serif;
+}
+
+.text-center .mx-3 .mb-2 .mt-4 {
+  display: none;
+}
+
+.forpdf {
+  display: none;
+}
+
 .card-header {
   font-size: 2em;
+  text-decoration: wavy;
 }
 
 a {
@@ -24,4 +37,8 @@ png {
 .pdf-head {
   font-size: 3em;
   text-align: center;
+}
+
+#content {
+  margin-top: 1em;
 }
