--- a/app/assets/stylesheets/article_show.css
+++ b/app/assets/stylesheets/article_show.css
@@ -32,6 +32,19 @@
   box-shadow: 0 0 0 0.10rem #2c3e50;
 }
 
+.badge-help {
+  color: #fff;
+  background-color: #2c3e50;
+  border-color: #2c3e50;
+}
+
+.badge-help:hover {
+  color: #fff;
+  background-color: #253544;
+  border-color: #233240;
+  box-shadow: 0 0 0 0.10rem #2c3e50;
+}
+
 .repertory {
   position: fixed;
   top: 37%; 
