--- a/app/views/articles/_header_article_show.html.erb
+++ b/app/views/articles/_header_article_show.html.erb
@@ -14,8 +14,9 @@
   </div>
 
   <div class="col d-flex justify-content-end me-5 mt-2">
-    <div class="card border-light col-3 mt-2">
+    <div class="card border-light col-4 mt-2">
       <div class="d-flex justify-content-around bg-light ">
+
         <%if user_signed_in?%>        
 
           <%if whith_tag(current_user,@article) == "Approved"%>
@@ -41,7 +42,7 @@
           <a href="<%=article_tags_path(@article.id)%>" data-method="post"><span class="badge badge-fake rounded-pill bg-warning" data-bs-toggle="tooltip" data-bs-placement="top" title="Need Review"><span class="iconify" data-icon="jam:write-f" style="color: white;" data-width="25" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:need_review]%></span></span></a>
           <a href="<%=article_tags_path(@article.id)%>" data-method="post"><span class="badge badge-fake rounded-pill bg-danger" data-bs-toggle="tooltip" data-bs-placement="top" title="Not Approved"><span class="iconify" data-icon="emojione-monotone:cross-mark" style="color: white;" data-width="30" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:not_approved]%></span></span></a>
         <%end%>
-
+      <a href="#"><span class="badge badge-help rounded-pill bg-primary" data-bs-toggle="tooltip" data-bs-placement="top" title="Aide"><span class="iconify badge-help" data-icon="mdi:help"></span></span></a>
       </div>
     </div>
   </div>
