--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,26 +1,20 @@
-<div class="col">
-  <div class="offset-2 col-8 mx-auto">
-    <div class="card border-secondary p-4 text-center justify-content-center bg-light above-small shadow-lg">
-          <h3>Modifier votre profil</h3>
-          
-          <%= form_tag profile_path(@user.id), :method => :patch, class: 'text-center form-group,form-control' do %>
-         
-            <%= label_tag 'Nom de famille' %>
-            <%= text_field_tag 'last_name', nil, placeholder: @user.last_name, class:"form-control" %>
-            <br>
-            
-            <%= label_tag 'Prénom' %>
-            <%= text_field_tag 'first_name', nil, placeholder: @user.first_name, class:"form-control" %>
-            <br>
+<div class="offset-2 col-6 col-xl-6 mx-auto">
+  <div class="card text-center border-secondary py-4 bg-light above-small shadow-lg">
+    <h3>Modifier votre profil</h3>        
+    <div class=" col-5 justify-content-center mx-auto" >
+      <%= form_tag profile_path(@user.id), :method => :patch, class: 'text-center form-group,form-control' do %>
 
-            <a href="<%= edit_user_registration_path(current_user.id) %>">Changer de Mot de Passe</a>
-            
-            <br>
-            <%= submit_tag "Enregistrer", class: "mt-3 btn btn-lg btn btn-success"  %>
+        <%= label_tag 'Prénom' %>
+        <%= text_field_tag 'first_name', nil, placeholder: @user.first_name, class:"form-control" %>
+        <br>
+        <%= label_tag 'Nom de famille' %>
+        <%= text_field_tag 'last_name', nil, placeholder: @user.last_name, class:"form-control" %>
+        <br>    
+        <a href="<%= edit_user_registration_path(current_user.id) %>">Changer de Mot de Passe</a>           
+        <br>
+        <%= submit_tag "Enregistrer", class: "mt-3 btn btn-lg btn btn-success"  %>
 
-          <% end %>
-
-      </div>
-    </div>
+      <% end %>
+    </div>   
   </div>
 </div>
