--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="offset-2 col-6 col-xl-6 mx-auto">
   <div class="card text-center border-secondary py-4 bg-light above-small shadow-lg">
-    <h3>Modifier votre profil</h3>        
+    <h3>Editer votre profil</h3>        
     <div class=" col-5 justify-content-center mx-auto" >
       <%= form_tag profile_path(@user.id), :method => :patch, class: 'text-center form-group,form-control' do %>
 
