--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -10,7 +10,7 @@
         <%= label_tag 'Nom de famille' %>
         <%= text_field_tag 'last_name', nil, placeholder: @user.last_name, class:"form-control" %>
         <br>    
-        <a href="<%= edit_user_registration_path(current_user.id) %>">Changer de Mot de Passe</a>           
+        <a href="<%= edit_user_registration_path(current_user.id) %>" class="none-underline">Modifier mon compte</a>           
         <br>
         <%= submit_tag "Enregistrer", class: "mt-3 btn btn-lg btn btn-success"  %>
 
