--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -2,14 +2,18 @@
   <div class="card text-center border-secondary py-4 bg-light above-small shadow-lg">
     <h3>Editer votre profil</h3>        
     <div class=" col-5 justify-content-center mx-auto" >
-      <%= form_tag profile_path(@user.id), :method => :patch, class: 'text-center form-group,form-control' do %>
+      <%= form_tag profile_path(@user.id), :method => :patch, multipart: true, class: 'text-center form-group,form-control' do %>
 
         <%= label_tag 'Prénom' %>
         <%= text_field_tag 'first_name', nil, placeholder: @user.first_name, class:"form-control" %>
         <br>
         <%= label_tag 'Nom de famille' %>
         <%= text_field_tag 'last_name', nil, placeholder: @user.last_name, class:"form-control" %>
-        <br>    
+        <br>
+        <%= label_tag "Ajouter une photo de profil", nil, class: 'mb-2' %>
+        <br>
+        <%= file_field_tag :avatar %>
+        <br>  
         <a href="<%= edit_user_registration_path(current_user.id) %>" class="none-underline">Modifier mon compte</a>           
         <br>
         <%= submit_tag "Enregistrer", class: "mt-3 btn btn-lg btn btn-success"  %>
