--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -39,7 +39,7 @@
   </div>
 </div>
 
-<% if @user.articles.length == 0%>
+<% if @user.articles.length <= 1%>
   <%= render 'layouts/footer_sticky' %>
 <% else %>
   <%= render 'layouts/footer' %>
