--- a/app/views/layouts/_header_big.html.erb
+++ b/app/views/layouts/_header_big.html.erb
@@ -1,12 +1,13 @@
 <!-- Background image -->
 <div
-  class="pt-5 text-center bg-image justify-content-start"
+  class="pt-5 text-center bg-image justify-content-start rellax"
   style="
     background-image: url('<%= asset_path 'bgimage.jpg' %>');
     height: 40vh;
     background-size: cover;
     background-position: 35% 65%;
   "
+  data-rellax-speed="-4"
 >
   <span style="filter: blur(8px)"></span>
   <div class="mask" style="background-color: rgba(0, 0, 0, 0.8)">
