--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,9 @@
 <style>html {
     overflow-x: hidden;
 }</style>
-
+<script>
+    const rellax = new Rellax('.rellax');
+</script>
 </body>
 
 </html>
