addec the mandatory fileds star inside nex article view

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -3,26 +3,26 @@
     <div class="card border-secondary p-4 text-center justify-content-center bg-light above-small shadow-lg">
       <h3>Publier un article</h3>
       <%= form_tag(url_for(action: 'create'), method: "post", multipart: true, class: 'text-center form-group,form-control') do %>
-        <%= label_tag 'Titre' %>
+        <%= label_tag 'Titre' %><small class="text-danger ms-1 fs-5">*</small>
 
         <%= text_field_tag 'title', nil, class: "form-control" %>
         <br>
-        <%= label_tag 'Résumé' %>
+        <%= label_tag 'Résumé' %> <small class="text-danger ms-1 fs-5">*</small>
         <%= text_area_tag 'summary', nil, class: "form-control" %>
         <br>
-        <%= label_tag 'Introduction' %>
+        <%= label_tag 'Introduction' %><small class="text-danger ms-1 fs-5">*</small>
         <%= text_area_tag 'introduction', nil, class: "form-control" %>
         <br>
-        <%= label_tag 'Protocole' %>
+        <%= label_tag 'Protocole' %><small class="text-danger ms-1 fs-5">*</small>
         <%= text_area_tag 'protocol', nil, class: "form-control" %>
         <br>
-        <%= label_tag 'Résultats' %>
+        <%= label_tag 'Résultats' %><small class="text-danger ms-1 fs-5">*</small>
         <%= text_area_tag 'result', nil, class: "form-control" %>
         <br>
-        <%= label_tag 'Conclusion' %>
+        <%= label_tag 'Conclusion' %><small class="text-danger ms-1 fs-5">*</small>
         <%= text_area_tag 'conclusion', nil, class: "form-control" %>
         <br>
-        <%= label_tag 'Références' %>
+        <%= label_tag 'Références' %><small class="text-danger ms-1 fs-5">*</small>
         <%= text_area_tag 'references', nil, class: "form-control" %>
         <br>
         <%= label_tag 'Mots Clés' %>
@@ -42,6 +42,7 @@
         <br>
         <br>
         <%= submit_tag "Publier mon article", class: "mt-3 btn btn-lg btn btn-success" %>
+        <p class="mt-4"><small class="text-danger me-2 fs-5">*</small>champs obligatoires</p>
       <% end %>
     </div>
   </div>
