--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -4,10 +4,10 @@
     <div class=" col-5 justify-content-center mx-auto" >
       <%= form_tag profile_path(@user.id), :method => :patch, multipart: true, class: 'text-center form-group,form-control' do %>
 
-        <%= label_tag 'Prénom' %>
+        <%= label_tag 'Prénom' %><small class="text-danger ms-1 fs-5">*</small>
         <%= text_field_tag 'first_name', @user.first_name, placeholder: @user.first_name, class:"form-control" %>
         <br>
-        <%= label_tag 'Nom de famille' %>
+        <%= label_tag 'Nom de famille' %><small class="text-danger ms-1 fs-5">*</small>
         <%= text_field_tag 'last_name', @user.last_name, placeholder: @user.last_name, class:"form-control" %>
         <br>
         <%= label_tag "Ajouter une photo de profil", nil, class: 'mb-2' %>
@@ -17,7 +17,7 @@
         <a href="<%= edit_user_registration_path(current_user.id) %>" class="none-underline">Modifier mon compte</a>           
         <br>
         <%= submit_tag "Enregistrer", class: "mt-3 btn btn-lg btn btn-success"  %>
-
+        <p class="mt-4"><small class="text-danger me-2 fs-5">*</small>champs obligatoires</p>
       <% end %>
     </div>   
   </div>
