--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -6,18 +6,19 @@
         <%= render "devise/shared/error_messages", resource: resource %>
         <%= f.hidden_field :reset_password_token %>
         <div class="field mt-2">
-          <%= f.label :password, "Nouveau mot de passe", class:"mt-3" %><br />
+          <%= f.label :password, "Nouveau mot de passe", class:"mt-3" %><small class="text-danger ms-1 fs-5">*</small><br />
           <% if @minimum_password_length %>
             <em>(<%= @minimum_password_length %> characters minimum)</em><br />
           <% end %>
           <%= f.password_field :password, class: 'form-control-lg', autofocus: true, autocomplete: "new-password" %>
         </div>
         <div class="field mt-2">
-          <%= f.label :password_confirmation, "Confirmation du mot de passe", class:"mt-3" %><br />
+          <%= f.label :password_confirmation, "Confirmation du mot de passe", class:"mt-3" %><small class="text-danger ms-1 fs-5">*</small><br />
           <%= f.password_field :password_confirmation, class: 'form-control-lg', autocomplete: "new-password" %>
         </div>
         <div class="actions m-2">
           <%= f.submit "Modifier le mot de passe", class:"btn btn-lg btn-primary border-primary m-2" %>
+          <p class="mt-4"><small class="text-danger me-2 fs-5">*</small>champs obligatoires</p>
         </div>
       <% end %>
       <%= render "devise/shared/links" %>
