--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -32,12 +32,13 @@
   </div>
 
   <div class="field mt-2">
-    <%= f.label :current_password, "Ancien mot de passe", class:"mt-3"%></br>
+    <%= f.label :current_password, "Ancien mot de passe", class:"mt-3"%><small class="text-danger ms-1 fs-5">*</small></br>
     <%= f.password_field :current_password, class: 'form-control-lg', autocomplete: "current-password" %>
   </div>
 
   <div class="actions mt-2">
     <%= f.submit "Mise à jour", class: "m-2 btn btn-lg btn-primary border-primary" %>
+    <p class="mt-4"><small class="text-danger me-2 fs-5">*</small>champs obligatoires</p>
   </div>
 <% end %>
 </div>
