--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -6,12 +6,13 @@
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field mt-2">
-    <%= f.label :email %>, "Email", class:"mt-3"%><br/>
+    <%= f.label :email, "Email", class:"mt-3"%><small class="text-danger ms-1 fs-5">*</small><br/>
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
   <div class="actions m-2">
     <%= f.submit "envoyer",  class: "btn btn-lg btn-primary"  %>
+    <p class="mt-4"><small class="text-danger me-2 fs-5">*</small>champs obligatoires</p>
   </div>
 <% end %>
 
