v1 to rework text in help & icon in help

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -2,35 +2,31 @@
 <div class="col">
   <div class="offset-2 col-8 mx-auto">
     <div class="card border-secondary p-4 justify-content-center bg-light above-small shadow-lg">
-      
       <div class="text-center card border-light bg-light ">
-  <div >
-    <p><br></p>
-    <h3><b>AIDE</b></h3>
-  </div>
-</div>
-
-
-!!!!!REtour là d'où tu viens
-
-  <div class="card border-secondary p-0 m-50 bg-light ">
-
-    <div class="card-header">Aide 1</div>
-    <div class="card-body-summary justify-content-center">
-     <p> ExempleExemple ExempleExempleExempleExemple ExempleExempleExemple</p>
-    </div>
-
-  </div>
-
-
-<div class="card border-light p-4 justify-content-center bg-light ">
-  <div>
-    <div class="card-header">Aide 2</div>
-    <div class="card-body justify-content-center">
-     <p> ExempleExemple ExempleExempleExempleExempleExempleExExempleExExempleExExempleExExempleExExempleExExempleExExempleExExempleExExempleExExempleEx ExempleExempleExemple</p>
-    </div>
-  </div>
-</div>
+        <div >
+          <p><br></p>
+          <h3><b>Les Tags</b></h3>
+        </div>
+      </div>
+      <div class="card border-light p-4 justify-content-center bg-light ">
+        <div>
+          <div class="card-header">En tant qu'inscrit, vous pouvez donnez votre avis sur l'article que vous venez de lire.</div>
+          <div class="card-body">
+          <div class="row justify-content-start">
+            <div class="col-1">
+              <span class="badge rounded-pill bg-success"><span class="iconify" data-icon="mdi:check-bold" style="color: white;" data-width="20"data-height="20"></span></span>
+              <span class="badge rounded-pill bg-warning"><span class="iconify" data-icon="jam:write-f" style="color: white;" data-width="20" data-height="20"></span></span>
+              <span class="badge rounded-pill bg-danger"><span class="iconify" data-icon="emojione-monotone:cross-mark" style="color: white;" data-width="20" data-height="20"></span></span>
+            </div>
+          
+           <div class="col-10">
+           <p>Soit, vous estimez qu'il s'agit effectivement d'une expérience non-concluante.</p>
+            <p> Soit, vous estimez que l'expérience nécessite d'être retravaillée avant de conclure à un échec.</p>
+            <p> Soit, vous estimez que l'expérience est une réussite, contrairement à ce que son auteur pensait en la publiant sur le Gaffex. </p>
+            </div>
+          </div>
+        </div>
+      </div>
 
 
 
