added categories on article show

--- a/app/views/articles/_header_article_show.html.erb
+++ b/app/views/articles/_header_article_show.html.erb
@@ -14,7 +14,7 @@
   </div>
 
   <div class="col d-flex justify-content-end me-5 mt-2">
-    <div class="card border-light col-3 mt-2">
+    <div class="card border-light col-3 mt-2 bg-light">
       <div class="d-flex justify-content-around bg-light ">
         <%if user_signed_in?%>        
 
@@ -41,7 +41,9 @@
           <a href="<%=article_tags_path(@article.id)%>" data-method="post"><span class="badge badge-fake rounded-pill bg-warning" data-bs-toggle="tooltip" data-bs-placement="bottom" title="À Retravailler"><span class="iconify" data-icon="jam:write-f" style="color: white;" data-width="25" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:need_review]%></span></span></a>
           <a href="<%=article_tags_path(@article.id)%>" data-method="post"><span class="badge badge-fake rounded-pill bg-danger" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Non Approuvé"><span class="iconify" data-icon="emojione-monotone:cross-mark" style="color: white;" data-width="30" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:not_approved]%></span></span></a>
         <%end%>
-
+      </div>
+      <div class="d-flex justify-content-center mt-5 bg-light">
+        <a href="<%= category_path(@article.category.id) %>" style="text-decoration: none; color: black;"><%= @article.category.name %></a>
       </div>
     </div>
   </div>
