--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="offset-2 col-8 mx-auto">
     <div class="card border-secondary p-4 text-center justify-content-center bg-light above-small shadow-lg">
       <h3>Publier un article</h3>
-      <%= form_tag(url_for(action: 'create'), method: "post", multipart: true, class: 'text-center form-group,form-control') do %>
+      <%= form_tag article_path(@article.id), :method => :patch, multipart: true, class: 'text-center form-group,form-control' do %>
         <%= label_tag 'Catégorie' %><small class="text-danger ms-1 fs-5">*</small>
         <%= select_tag 'category', options_from_collection_for_select(@categories, 'id', 'name'), class: "form-control" %>
         <br/>
