--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -8,7 +8,7 @@
         <br/>
         <%= label_tag 'Titre' %><small class="text-danger ms-1 fs-5">*</small>
 
-        <%= text_field_tag 'title', @article.result, class: "form-control" %>
+        <%= text_field_tag 'title', @article.title, class: "form-control" %>
         <br>*
         <%= label_tag 'Résumé' %> <small class="text-danger ms-1 fs-5">*</small>
         <%= text_area_tag 'summary', @article.summary, class: "form-control" %>
