--- a/app/views/articles/_details_article_show.html.erb
+++ b/app/views/articles/_details_article_show.html.erb
@@ -65,7 +65,8 @@
     <div class="card-body card-body-references justify-content-center">
       <%= simple_format(@article.references) %>
     </div>
-    <div class="d-flex justify-content-end">
+    <div class="d-flex" style="justify-content: space-between;">
+      <div class="date">Article créé le <%= Time.zone.now %></div>
       <a href="<%= article_path(@article.id, format: :pdf) %>" target="_blank" class="btn btn-primary hover">Exporter en
         PDF</a>
     </div>
