--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -54,5 +54,5 @@
 <%= javascript_include_tag 'tags' %>
 
 <script>
-  getTags("<%= @keywords.join(' ') %>")
+  getTags("<%= @keywords.join(';') %>")
 </script>
