renamed the main js file name

--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -51,7 +51,7 @@
   </div>
 </div>
 
-<%= javascript_include_tag 'tags' %>
+<%= javascript_include_tag 'keywords' %>
 
 <script>
   getTags("<%= @keywords.join(';') %>")
