--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -29,13 +29,13 @@
         <%= text_area_tag 'references', nil, class: "form-control" %>
         <br>
         <%= label_tag 'Mots Clés' %>
-        <%= text_field_tag 'tags_input',
+        <%= text_field_tag 'keywords_input',
                            nil,
-                           id: 'tag-input',
+                           id: 'keyword-input',
                            class: "form-control",
                            placeholder: 'Mots clés séparés par des ;'
         %>
-        <%= hidden_field :tags, nil, id: 'tags-array' %>
+        <%= hidden_field :keywords, nil, id: 'keywords-array' %>
         <div class="tag-container">
         </div>
         <br/>
