--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -35,7 +35,7 @@
                            class: "form-control",
                            placeholder: 'Mots clés séparés par des ;'
         %>
-        <%= hidden_field :keywords, nil, id: 'keywords-array' %>
+        <%= hidden_field :keywords_list, nil, id: 'keywords-array' %>
         <div class="keywords-container">
         </div>
         <br/>
