--- a/app/views/searches/_results_list.html.erb
+++ b/app/views/searches/_results_list.html.erb
@@ -1,6 +1,6 @@
 <% if @results.count > 1 %>
-  <h4 class="text-center fw-blod mt-2 mb-3">Voici <%= @results.count %> résultats sur les <%= @results_count %> de votre recherche de
-    "<%= @keyword %>"</h4>
+  <h4 class="text-center fw-blod mt-2 mb-3">Nous avons Trouvé <%= @results_count %> correspondances pour votre recherche
+    de "<%= @keyword %>"</h4>
 <% elsif @results.count == 1 %>
   <h4 class="text-center fw-blod mt-2 mb-3">Nous n'avons trouvé qu'un seul résultat pour votre recherche de
     "<%= @keyword %>"</h4>
@@ -21,31 +21,31 @@
     <div class="card border-light col bg-light mt-3 ">
       <div class="d-flex justify-content-center ">
         <div row="">
-          <%if user_signed_in?%>
+          <% if user_signed_in? %>
 
-            <%if whith_tag(current_user,article) == "Approved"%>
+            <% if whith_tag(current_user, article) == "Approved" %>
               <span class="badge rounded-pill bg-success" data-bs-toggle="tooltip" data-bs-placement="top" title="Approuvé"><span class="iconify" data-icon="mdi:check-bold" style="color: #2c3e50;" data-width="20"></span><span class="badge rounded-pill bg-primary"><%= tag_count(article)[:approved] %></span></span>
-            <%else%>
+            <% else %>
               <span class="badge rounded-pill bg-success" data-bs-toggle="tooltip" data-bs-placement="top" title="Approuvé"><span class="iconify" data-icon="mdi:check-bold" style="color: white;" data-width="20"></span><span class="badge rounded-pill bg-primary"><%= tag_count(article)[:approved] %></span></span>
-            <%end%>
+            <% end %>
 
-            <%if whith_tag(current_user,article) == "Need Review"%>
+            <% if whith_tag(current_user, article) == "Need Review" %>
               <span class="badge rounded-pill bg-warning" data-bs-toggle="tooltip" data-bs-placement="top" title="À Retravailler"><span class="iconify" data-icon="jam:write-f" style="color: #2c3e50;" data-width="20" data-height="20"></span><span class="badge rounded-pill bg-primary"><%= tag_count(article)[:need_review] %></span></span>
-            <%else%>
+            <% else %>
               <span class="badge rounded-pill bg-warning" data-bs-toggle="tooltip" data-bs-placement="top" title="À Retravailler"><span class="iconify" data-icon="jam:write-f" style="color: white;" data-width="20" data-height="20"></span><span class="badge rounded-pill bg-primary"><%= tag_count(article)[:need_review] %></span></span>
-            <%end%>
+            <% end %>
 
-            <%if whith_tag(current_user,article) == "Not Approved"%>
+            <% if whith_tag(current_user, article) == "Not Approved" %>
               <span class="badge rounded-pill bg-danger" data-bs-toggle="tooltip" data-bs-placement="top" title="Non Approuvé"><span class="iconify" data-icon="emojione-monotone:cross-mark" style="color: #2c3e50;" data-width="20" data-height="20"></span><span class="badge rounded-pill bg-primary"><%= tag_count(article)[:not_approved] %></span></span>
-            <%else%>
+            <% else %>
               <span class="badge rounded-pill bg-danger" data-bs-toggle="tooltip" data-bs-placement="top" title="Non Approuvé"><span class="iconify" data-icon="emojione-monotone:cross-mark" style="color: white;" data-width="20" data-height="20"></span><span class="badge rounded-pill bg-primary"><%= tag_count(article)[:not_approved] %></span></span>
-            <%end%>
+            <% end %>
 
-          <%else%>
+          <% else %>
             <span class="badge rounded-pill bg-success" data-bs-toggle="tooltip" data-bs-placement="top" title="Approuvé"><span class="iconify" data-icon="mdi:check-bold" style="color: white;" data-width="20"></span><span class="badge rounded-pill bg-primary"><%= tag_count(article)[:approved] %></span></span>
             <span class="badge rounded-pill bg-warning" data-bs-toggle="tooltip" data-bs-placement="top" title="À Retravailler"><span class="iconify" data-icon="jam:write-f" style="color: white;" data-width="20" data-height="20"></span><span class="badge rounded-pill bg-primary"><%= tag_count(article)[:need_review] %></span></span>
             <span class="badge rounded-pill bg-danger" data-bs-toggle="tooltip" data-bs-placement="top" title="Non Approuvé"><span class="iconify" data-icon="emojione-monotone:cross-mark" style="color: white;" data-width="20" data-height="20"></span><span class="badge rounded-pill bg-primary"><%= tag_count(article)[:not_approved] %></span></span>
-          <%end%>
+          <% end %>
         </div>
       </div>
       <div class="d-flex justify-content-center mt-4">
