--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,15 +1,19 @@
 <div class="col">
   <div class="offset-2 col-8 mx-auto">
     <div class="card border-secondary p-4 text-center justify-content-center bg-light above-small shadow-lg">
-      <h3>Publier un article</h3>
-      <%= form_tag(url_for(action: 'create'), method: "post", multipart: true, class: 'text-center form-group,form-control') do %>
-        <%= label_tag 'Catégorie' %><small class="text-danger ms-1 fs-5">*</small>
-        <%= select_tag 'category', options_from_collection_for_select(@categories, 'id', 'name'), class: "form-control form-select" %>
-        <br/>
-        <%= label_tag 'Titre' %><small class="text-danger ms-1 fs-5">*</small>
+      <h3 class="m-4">Publier un article</h3>
+        <div class="col-2 mx-auto text-center">
+          <%= form_tag(url_for(action: 'create'), method: "post", multipart: true, class: 'text-center form-group,form-control') do %>
+            <%= label_tag 'Catégorie' %><small class="text-danger ms-1 fs-5">*</small>
+            <%= select_tag 'category', options_from_collection_for_select(@categories, 'id', 'name'), class: "form-control form-select" %>
+            <br/>
+            </div>
+            <div class="col-5 mx-auto text-center">
+            <%= label_tag 'Titre' %><small class="text-danger ms-1 fs-5">*</small>
 
-        <%= text_field_tag 'title', nil, class: "form-control" %>
-        <br>
+            <%= text_field_tag 'title', nil, class: "form-control" %>
+            <br>
+            </div>
         <%= label_tag 'Résumé' %> <small class="text-danger ms-1 fs-5">*</small>
         <%= text_area_tag 'summary', nil, class: "form-control" %>
         <br>
